[Mac][Material Design] Restore apps page shortcut icon in bookmarks bar.

A recent bookmarks bar change caused the apps page shortcut button to
display a document icon instead of the 9 colored dots icon.

R=avi@chromium.org
BUG=613458

Review-Url: https://codereview.chromium.org/2007103002
Cr-Commit-Position: refs/heads/master@{#395669}

Former-commit-id: 4faf1132c3d418b065d5600b8ed07f4175b15bfe